trunk/Archive2/55/2507efbcfa29b5/output
main.cpp: In function 'int main()':
main.cpp:17:19: error: no match for 'operator+' (operand types are 'int' and 'Integer')
     Integer c = 1 + a; // Not allowed
                   ^
main.cpp:17:13: warning: unused variable 'c' [-Wunused-variable]
     Integer c = 1 + a; // Not allowed
             ^
